useMobileDisplay hook + fix table overflow in mobile + change link and loop icon color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,11 +39,11 @@
   }
 
   .link-active {
-    @apply text-fuchsia-500 dark:text-white
+    @apply text-orange-500
   }
 
   .link {
-    @apply block hover:text-fuchsia-500 dark:text-gray-400 dark:hover:text-white transition duration-200
+    @apply block hover:text-orange-500 dark:text-gray-400 dark:hover:text-white transition duration-200
   }
 
   .menu-wrapper > *{
